test/libhyperion/syntaxTests/inlineAssembly/invalid/external_function_pointer_offset.hyp
contract C {
	function testFunction() external {}

	function testYul() public {
		function() external fp = this.testFunction;

		uint myOffset;

		assembly {
			myOffset := fp.offset
		}
	}
}
// ----
// TypeError 4888: (82-104): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
